tests/negative/neg_send_use_after_move.safe
-- Test: neg_send_use_after_move
-- Description: Access-typed channel elements are rejected before send ownership-transfer checks run.
-- Expected: REJECT source_frontend_error

package Neg_Send_Use_After_Move

   type Payload is record
      Value : Integer;


   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   function Run
      Source : Payload_Ptr = new ((Value = 1) as Payload);

      send Data_Ch, Source;
      Source.all.Value = 2;



